[package]
name = "zamm"
version = "0.1.7"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
edition = "2018"
description = "A literate programming tool for Yin and Yang"
readme = "README.md"
repository = "https://github.com/amosjyng/zamm"
license = "GPL-3.0"
keywords = ["codegen", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "2.33.3", features = ["color", "wrap_help"] }
cloud-storage = { version = "0.6.2", features = ["sync"] }
colored = "2"
indoc = "1.0"
itertools = "0.9.0"
path_abs = "0.5.0"
pulldown-cmark = "0.8.0"
reqwest = "0.10.9"
semver = "0.9.0"
tokio = "0.2.5"
toml = "0.5.7"
